Change displayed title

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="styles.css" type="text/css" />
 </head>
 <body ng-app="PomodoroApp">
-  <h1 class="text-center">FreeCodeCamp</h1>
+  <h1 class="text-center">Pomodoro Timer</h1>
   <div class="container" ng-controller="PomodoroController">
     <div class="row center-block">
       <div class="text-center lead col-md-offset-3 col-md-3 col-sm-offset-2 col-sm-4 col-xs-offset-2 col-xs-4">
